# monasol-protocol

./: .env.example  .prettierignore  .prettierrc  .replit  CONCEPT.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
.migration-backup/: eslint.config.js  package-lock.json  package.json  vite.config.ts
artifacts/solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
artifacts/solana/programs/guardian_multisig/: Cargo.toml
artifacts/solana/programs/guardian_multisig/src/: lib.rs
artifacts/solana/programs/monasol_protocol/: Cargo.toml
artifacts/solana/programs/monasol_protocol/src/: lib.rs
artifacts/solana/programs/solana/: Cargo.toml
artifacts/solana/programs/solana/src/: lib.rs
artifacts/solana/programs/vault_key/: Cargo.toml
artifacts/solana/programs/vault_key/src/: lib.rs
artifacts/solana/tests/: helpers.ts  solana.js
attached_assets/: Anchor_1777514835160.toml  CONCEPT_1777159978997.md  Cargo_1777514856489.toml  Cargo_1777537085368.toml  EventsPage_1777159984001.tsx  Locker_1777338440200.json  Locker_1777338440205.vy  MonaSol_Dashboard_GraphQL_Schema_1777787714914.graphql  MonaSol_Dashboard_React_Architecture_1777787714911.md  MonaSol_NeighborhoodWatch_1777787714914.vy  MonaSol_Node_Health_Rotation_System_1777787714914.md  MonaSol_Notification_Service_Architecture_1777787714914.md  MonaSol_Protocol_v2_1777347217984.docx  MonaSol_Security_Integration_Guide_1777787714915.md  MonaSol_Watcher_Staking_Economics_1777787714915.md  MoveInModal_1777114637408.tsx  Pasted--SPDX-License-Identifier-MIT-pragma-solidity-0-8-24-imp_1777383055220.txt  Pasted--SPDX-License-Identifier-MIT-pragma-solidity-0-8-24-imp_1777383094465.txt  Pasted--SPDX-License-Identifier-MIT-pragma-solidity-0-8-24-imp_1777409806066.txt  Pasted--Step-4-Locker-blueprint-LockerFactory-Vyper-section-St_1777412872378.txt  Pasted--anchor-deploy-provider-cluster-devnet-provider-wallet-_1777699543557.txt  Pasted--cargo-install-git-https-github-com-coral-xyz-anchor-av_1777532578920.txt  Pasted--cargo-install-git-https-github-com-coral-xyz-anchor-av_1777533002033.txt  Pasted--vault-key-MonaS-1777514776832_1777514776833.txt  Pasted--version-0-4-0-title-MonaSol-Locker-notice-A-single-bui_1777412124170.txt  Pasted--version-0-4-0-title-MonaSol-LockerFactory-notice-Deplo_1777412187466.txt  Pasted--version-0-4-0-title-MonaSol-LockerTreasurySplitter-not_1777412206141.txt  Pasted-Here-s-a-clear-report-you-can-paste-directly-to-your-Re_1777539849192.txt  Pasted-Three-findings-worth-flagging-for-tomorrow-s-discussion_1777465869261.txt  Pasted-What-s-in-monasol-protocol-src-lib-rs-7-instructions-in_1777515706016.txt  Pasted-You-are-operating-in-a-strict-multi-phase-engineering-w_1777068539929.txt  Pasted-cargo-install-git-https-github-com-coral-xyz-anchor-avm_1777532497280.txt  Pasted-cat-nexus-bridge-artifacts-contracts-contracts-OracleVe_1777700368373.txt  Pasted-cat-nexus-bridge-artifacts-contracts-contracts-Vault-so_1777700465025.txt  Pasted-cat-nexus-bridge-artifacts-contracts-contracts-VaultFac_1777700500226.txt  Pasted-cat-nexus-bridge-artifacts-solana-target-idl-guardian-m_1777696972060.txt  Pasted-cat-nexus-bridge-artifacts-solana-target-idl-monasol-pr_1777697065351.txt  Pasted-cat-nexus-bridge-artifacts-solana-target-idl-vault-key-_1777696905644.txt  Pasted-cd-nexus-bridge-artifacts-solana-Deploy-with-oracle-key_1777699060799.txt  Pasted-cd-nexus-bridge-git-pull-origin-main-cd-artifacts-solan_1777534375933.txt  (+41 more)
client/: index.html
docs/: architecture.md
references/: db.md
server/: storage.ts  vite.ts
(+144 files in other folders)
