[workspace]
members = [
    "programs/vault_key",
    "programs/guardian_multisig",
    "programs/monasol_protocol",
]
resolver = "2"

[workspace.dependencies]
anchor-lang    = { version = "=0.30.1", features = ["init-if-needed"] }
mpl-core       = { version = "=0.9.1",  features = ["anchor"] }
solana-program = "=1.18.26"

[profile.release]
overflow-checks = true
lto             = "thin"

[profile.dev]
overflow-checks = true
