[workspace]
members = [
    "programs/vault_key",
    "programs/guardian_multisig",
    "programs/monasol_protocol",
]
resolver = "2"

[workspace.dependencies]
anchor-lang    = { version = "=0.31.1", features = ["init-if-needed"] }
solana-program = "=2.1.0"

[profile.release]
overflow-checks = true
lto             = "thin"

[profile.dev]
overflow-checks = true
