[package]
name    = "guardian_multisig"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "guardian_multisig"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang    = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
anchor-client = { version = "0.31.1", features = ["mock"] }
