[package]
name    = "monasol_protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "monasol_protocol"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang    = { workspace = true }

# Cross-chain dependency — wired after messaging pattern is decided
# wormhole-anchor-sdk = { version = "0.3.0" }

[dev-dependencies]
anchor-client = { version = "0.31.1", features = ["mock"] }
