[package]
name    = "vault_key"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "vault_key"

[dependencies]
anchor-lang    = { workspace = true }

[dev-dependencies]
anchor-client = { version = "0.31.1", features = ["mock"] }

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]
